<resources>
    <string name="app_name">FLTR</string>
    <string name="tap_to_start">TAP TO START</string>
    <string name="gender">Gender:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="proceed">Proceed</string>
    <string name="enter_name">Enter Name:</string>
    <string name="microphone">Microphone</string>
    <string name="logo">logo</string>
    <string name="fltr">FLTR</string>
    <string name="speech_to_text">SPEECH-TO-TEXT</string>
    <string name="tap">Tap to Start</string>
    <string name="space" />
    <string name="start">.</string>
    <string name="tap_to_speak">Tap to Speak</string>
    <string name="kudlit">KUDLIT</string>
    <string name="learn">Learn</string>
    <string name="filipino_to_baybayin">Filipino to Baybayin</string>
    <string name="simulan">ᜐᜒᜋᜓᜎᜈ᜔</string>
    <string name="todo">TODO</string>
    <string name="simulantext">Simulan</string>
    <string name="kudlitbaybayin">ᜃᜓᜇ᜔ᜎᜒᜆ</string>
    <string name="tapstart">Tap to start</string>
    <string name="pindutin">ᜉᜒᜈ᜔ᜇᜓᜆᜒᜈ᜔</string>
    <string name="baybayin_bitch">baybayin bitch</string>
    <string name="learn_baybayin">Learn Baybayin</string>
    <string name="y_y">Y/y</string>
    <string name="vowel_patinig">Vowel : Patinig (ᜉᜆᜒᜈᜒᜄ)᜔</string>
    <string name="vowel_consonant_combination">Vowel + Consonant Combination</string>
    <string name="a_a">A/a</string>
    <string name="e_e_or_i_i">E/e or I/i</string>
    <string name="o_o_or_u_u">O/o or U/u</string>
    <string name="ba_ba">Ba/ba</string>
    <string name="be_be_or_bi_bi">Be/be or Bi/bi</string>
    <string name="bo_bo_or_bu_bu">Bo/bo or Bu/bu</string>
    <string name="ka_ka">Ka/ka</string>
    <string name="ke_ke_or_ki_ki">Ke/ke or Ki/ki</string>
    <string name="ko_ko_or_ku_ku">Ko/ko or Ku/ku</string>
    <string name="da_da">Da/da</string>
    <string name="de_de_or_di_di">De/de or Di/di</string>
    <string name="do_do_or_du_du">Do/do or Du/du</string>
    <string name="ga_ga">Ga/ga</string>
    <string name="ge_ge_or_gi_gi">Ge/ge or Gi/gi</string>
    <string name="go_go_or_gu_gu">Go/go or Gu/gu</string>
    <string name="ha_ha">Ha/ha</string>
    <string name="he_he_or_hi_hi">He/he or Hi/hi</string>
    <string name="ho_ho_or_hu_hu">Ho/ho or Hu/hu</string>
    <string name="la_la">La/la</string>
    <string name="le_le_or_li_li">Le/le or Li/li</string>
    <string name="lo_lo_or_lu_lu">Lo/lo or Lu/lu</string>
    <string name="ma_ma">Ma/ma</string>
    <string name="me_me_or_mi_mi">Me/me or Mi/mi</string>
    <string name="mo_mo_or_mu_mu">Mo/mo or Mu/mu</string>
    <string name="na_na">Na/na</string>
    <string name="ne_ne_or_ni_ni">Ne/ne or Ni/ni</string>
    <string name="no_no_or_nu_nu">No/no or Nu/nu</string>
    <string name="pa_pa">Pa/pa</string>
    <string name="pe_pe_or_pi_pi">Pe/pe or Pi/pi</string>
    <string name="po_po_or_pu_pu">Po/po or Pu/pu</string>
    <string name="ra_ra">Ra/ra</string>
    <string name="re_re_or_ri_ri">Re/re or Ri/ri</string>
    <string name="ro_ro_or_ru_ru">Ro/ro or Ru/ru</string>
    <string name="sa_sa">Sa/sa</string>
    <string name="se_se_or_si_si">Se/se or Si/si</string>
    <string name="so_so_or_su_su">So/so or Su/su</string>
    <string name="ta_ta">Ta/ta</string>
    <string name="te_te_or_ti_ti">Te/te or Ti/ti</string>
    <string name="to_to_or_tu_tu">To/to or Tu/tu</string>
    <string name="wa_wa">Wa/wa</string>
    <string name="we_we_or_wi_wi">We/we or Wi/wi</string>
    <string name="wo_wo_or_wu_wu">Wo/wo or Wu/wu</string>
    <string name="ya_ya">Ya/ya</string>
    <string name="ye_ye_or_yi_yi">Ye/ye or Yi/yi</string>
    <string name="yo_yo_or_yu_yu">Yo/yo or Yu/yu</string>
    <string name="consonant_katinig">Consonant - Katinig (ᜃᜆᜒᜈᜒᜄ᜔)</string>
    <string name="b_b">B/b</string>
    <string name="k_k">K/k</string>
    <string name="d_d">D/d</string>
    <string name="g_g">G/g</string>
    <string name="h_h">H/h</string>
    <string name="l_l">L/l</string>
    <string name="m_m">M/m</string>
    <string name="n_n">N/n</string>
    <string name="ng_ng">Ng/ng</string>
    <string name="p_p">P/p</string>
    <string name="r_r">R/r</string>
    <string name="s_s">S/s</string>
    <string name="t_t">T/t</string>
    <string name="w_w">W/w</string>
    <string name="tap_here">tap</string>
    <string name="kudlitbaybayinfont">ᜃᜓᜇ᜔ᜎᜒᜆ᜔</string>
</resources>